[Error] Implement GPS function, have error  On branch master  Changes to be committed: 	modified:   bin/Timer.apk 	modified:   bin/classes.dex 	new file:   bin/dexedLibs/android-support-v4-35b674616c5077cd85de9af3448d27c5.jar 	modified:   bin/resources.ap_ 	modified:   res/layout/activity_main.xml 	modified:   res/values/strings.xml 	modified:   src/com/runner/timer/MainActivity.java

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,42 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/startButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/start_button" />
-
-    <Button
-        android:id="@+id/stopButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/startButton"
-        android:layout_toLeftOf="@+id/startButton"
-        android:text="@string/stop_button" />
-
-    <TextView
-        android:id="@+id/min"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="32dp"
-        android:layout_toLeftOf="@+id/startButton"
-        android:text="00"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/sec"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/min"
-        android:layout_alignBottom="@+id/min"
-        android:layout_toRightOf="@+id/startButton"
-        android:text="00"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <TextView
         android:id="@+id/colon"
         android:layout_width="wrap_content"
@@ -51,6 +15,49 @@
         android:layout_alignBottom="@+id/min"
         android:layout_centerHorizontal="true"
         android:text=":"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/start_button" />
+
+    <Button
+        android:id="@+id/stopButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/colon"
+        android:text="@string/stop_button" />
+
+    <Button
+        android:id="@+id/mile_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/stopButton"
+        android:layout_alignBottom="@+id/stopButton"
+        android:layout_alignParentRight="true"
+        android:text="@string/mile_button" />
+
+    <TextView
+        android:id="@+id/min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="00"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/sec"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="00"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
