[Implement] GPS function  On branch master 	modified:   bin/Timer.apk 	modified:   bin/classes.dex 	modified:   res/layout/activity_main.xml 	modified:   res/values/strings.xml 	modified:   src/com/runner/function/GPSfunction.java 	modified:   src/com/runner/timer/MainActivity.java

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,4 +60,21 @@
         android:text="00"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <TextView
+        android:id="@+id/loText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:text="longutide" />
+
+    <TextView
+        android:id="@+id/laText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="16dp"
+        android:text="latitude" />
+
 </RelativeLayout>
