--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/loText"
         android:layout_marginTop="16dp"
         android:text="latitude" />
 
